# tinyworld

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml
api/: .env.example  Dockerfile  README.md  pyproject.toml
api/src/: __init__.py  main.py
docs/: 2025-01-04_movement_backend.md  2025-01-04_movement_frontend.md
tinyworld-backend/: .env.example  README.md  debug_agent.py  inspect_vector_store.py  pyproject.toml
tinyworld-backend/docs/: 2025-01-02-memory-storage-implementation.md  2025-01-27-conversational-agent.md  2025-01-31-workflow-trigger-timing-fix.md  2025-09-27-ai-wander.md  2025-09-27-autonomous-character-system.md  2025-09-27-entity-model.md  2025-09-27-socrates-agent-implementation.md  2025-09-27-world-loop.md  2025-10-01-chroma-memory-system.md  2025-10-02-vision-triggered-workflow.md
tinyworld-backend/src/tinyworld/: main.py
tinyworld-backend/src/tinyworld/agents/: conscious_worlfow.py  personalities.py  prompts.py
tinyworld-backend/src/tinyworld/api/: agents_routes.py
tinyworld-backend/src/tinyworld/core/: chroma_client.py  config.py  world_simulation.py
tinyworld-web/: .env.example  Dockerfile  README.md  index.html  package.json
tinyworld-web/docs/: 2025-09-27-agent-display-system.md  2025-09-27-pixi-setup.md  2025-09-27-render-loop.md  2025-09-27-sprites-and-assets.md  2025-09-27-tinyworld-implementation.md  2025-10-02-screenshot-vision-feature.md
tinyworld-web/src/: camera.ts  character.ts  main.ts  map.ts  scene.ts
web/: index.html  package.json  tsconfig.json  vite.config.ts
web/src/: main.ts
(+8 files in other folders)
